--- a/index.html
+++ b/index.html
@@ -16,21 +16,81 @@
         <div>
             <nav>
                 <ul>
-                    <li>item 1</li>
-                    <li>item 2</li>
-                    <li>item 3</li>
-                    <li>item 4</li>
-                    <li>item 5</li>
+                    <li><a href="index.html"> Inicio </a>
+                    </li>
+                    <li> <a href="./secciones/c3.html">C3 </a>
+
+                    </li>
+                    <li><a href="./secciones/c4cactus.html">C4 Cactus</a>
+                    </li>
+                    <li><a href="./secciones/berlingo.html">Berlingo </a>
+                    </li>
                 </ul>
             </nav>
         </div>
-    
+
     </header>
 
     <section class="contenido">
-        <div>
+        <div class="banner">
             <h2>PLAN DE AHORRO CITROEN</h2>
+
+            <img src="./imagenes/BANNERSNUEVO-06.jpg" alt="banner">
         </div>
+        <div class="c3">
+            <div>
+                <h3>Nuevo Citroen C3</h3>
+            </div>
+            <img class="img--c3" src="./imagenes/nuevo-c3.png" alt="nuevoc3">
+        </div>
+        <div class="c3">
+            <div>
+                <h3>Citroen C4</h3>
+            </div>
+            <img class="img--c3" src="./imagenes/C4-Cactus-1.png" alt="c4cactus">
+        </div>
+        <div class="c3">
+            <div>
+                <h3>Citroen Berlingo</h3>
+            </div>
+            <img class="img--c3" src="./imagenes/berlingo.png" alt="berlingo">
+        </div>
+
+
+
+        <article class="formu">
+            <div class="form">
+                <h6>Comunicate con nosotros para adquirir tu nuevo Citroën!</h6>
+                <div class="form-floating mb-3">
+                    <input type="name" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Nombre</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="surname" class="form-control" id="floatingPassword" placeholder="Apellido">
+                    <label for="floatingPassword">Apellido</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Celular</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="celphone" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Mail</label>
+                </div>
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Seleccioná tu modelo</option>
+                    <option value="1">C3</option>
+                    <option value="2">C4 Lounge</option>
+                    <option value="3">C4 Cactus</option>
+                    <option value="4">Aircross</option>
+                    <option value="5">Berlingo</option>
+                    <option value="6">Jumpy</option>
+                </select>
+                <button type="submit" class="btn btn-secondary btn-sm">Enviar</button>
+            </div>
+        </article>
+
+
 
     </section>
 
