--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="c3" id="c3">
             <div>
                 <h3>Nuevo Citroen C3</h3>
+                <p>Estilo - Personalidad</p>
                 <button type="submit" class="btn btn-secondary btn-sm"><a href="#form1">CONSULTAR</a>
                 </button>
             </div>
@@ -48,6 +49,7 @@
         <div class="c3" id="c4">
             <div>
                 <h3>Citroen C4</h3>
+                <p>Veloz - Creativo</p>
                 <button type="submit" class="btn btn-secondary btn-sm"><a href="#form1">CONSULTAR</a>
                 </button>
             </div>
@@ -56,6 +58,7 @@
         <div class="c3" id="berlingo">
             <div>
                 <h3>Citroen Berlingo</h3>
+                <p>Amplio - Utilitario</p>
                 <button type="submit" class="btn btn-secondary btn-sm"><a href="#form1">CONSULTAR</a>
                 </button>
             </div>
@@ -92,7 +95,9 @@
                     <option value="5">Berlingo</option>
                     <option value="6">Jumpy</option>
                 </select>
-                <button type="submit" class="btn btn-secondary btn-sm">Enviar</button>
+                <div class="btn"> 
+                    <button type="submit" class="btn btn-secondary btn-sm">Enviar</button>
+                </div>
             </div>
         </article>
 
