--- a/index.html
+++ b/index.html
@@ -35,9 +35,33 @@
     </header>
 
     <section class="contenido">
-        <div class="banner">
-            <img src="./imagenes/BANNERSNUEVO-06.jpg" alt="banner">
-        </div>
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./imagenes/BANNERSNUEVO-06.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./imagenes/bannersintexto-10.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./imagenes/bannersintexto-10 (1).jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
         <div class="recuadros">
             <div class="c3" id="c3">
                 <h3>Nuevo Citroen C3</h3>
@@ -126,8 +150,11 @@
                 </div>
             </div>
 
-            <div>
+            <div class="icons">
                 <p> TELEFONO 4653-0844</p>
+                <div class="phone">
+                    <i class="fa-solid fa-phone"></i>
+                </div>
 
             </div>
         </div>
